# beam

./: .gitignore  README.md  SphericalProjection.nb  beam_test.py  cantilever.py  cantilever_contact-mirror.py  cantilever_contact.py  contact.py  elements-jac.py  elements.py  errors.py  frame.py  interpolation.ipynb  interpolation.py  interpolation_test.py  ipython_exit.py  main.py  mathematics.py  mathematics_test.py  mesh.py  nearest_point_projection.py  netwon_raphson.py  newton_raphson.py  old_test_contact_cantilever.py  old_test_contact_cantilever_twist.py  old_test_dynamic_frame.py  patch.ipynb  patch.py  patch_0-old.py  patch_1.py  patch_2-old.py  patch_gen.py  postprocessing.py  projection.ipynb  projection.py  projection_test.py  requirements.txt  setup.cfg  setup.py  structures.py  (+8 more)
beam_tests/: test_cantilever.py  test_dynamic_frame.py  test_frame.py  test_patch.py  test_ring.py  test_static_cantilever.py  test_static_cantilever_contact.py  test_static_cantilever_contact_two_elements.py  test_static_cantilever_displacement_control.py  test_static_contact_twist.py  test_twist.py
notebooks/: examples.ipynb  interpolation.ipynb  patch.ipynb  projection.ipynb  ring.ipynb  sandbox.ipynb  sandbox_projection.ipynb  twist.ipynb
old/: elements-nojac.py  old_test_contact_patch.py  old_test_static_cantilever_displacement_control.py
src/beam/: contact.py  elements.py  errors.py  interpolation.py  (+7 more)
tests/: cantilever.py  frame.py  patch.py  ring.py  twist.py
unittest/: unittest_beam.py  unittest_interpolation.py  unittest_mathematics.py  unittest_projection.py
(+4 files in other folders)
