[metadata]
name = beam-pkg-tomecj
version = 1.0.0
author = Jan Tomec
author_email = jan.tomec@uniri.hr
description = Beam analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomecj/beam
project_urls =
    Bug Tracker = https://github.com/tomecj/beam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src